Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-1446

Memory leak in qmf agent

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • M4
    • M4
    • C++ Broker, QMF
    • None

    Description

      There's a memory leak in the management agent code that affects both the remote agent and the broker. If you repeatedly create and destroy queues, exchange, bindings, etc. on the broker, the memory usage will increase and not recover.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment