QPID-1446 - Fixed memory leak in management agent affecting broker. Added debug output to remote agent controllable via env variable.

git-svn-id: https://svn.apache.org/repos/asf/incubator/qpid/trunk/qpid@712696 13f79535-47bb-0310-9956-ffa450edef68